feat: Ajustando para function

--- a/Atividade Final/index.html
+++ b/Atividade Final/index.html
@@ -27,8 +27,8 @@
         <label for="msg">Mensagem:</label>
         <textarea name="msg" id="msg"></textarea>
 
-        <button id="btnEnviar">Enviar</button>
-        <button id="btnLimpar" class="btn-limpar">Limpar</button>
+        <button id="btnEnviar" onclick="enviarForm()">Enviar</button>
+        <button id="btnLimpar" class="btn-limpar" onclick="limparForm()">Limpar</button>
     </form>
     <script src="./main.js"></script>
 </body>
